--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
             <a href="#" rel="next">Next →</a>
         </nav>
     </section>
+    <script src="oneko.js"></script>
 </body>
 </html>
