commented one badge

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="public/webring/firefoxnow.gif" alt="Firefox NOW" width="88" height="31">
             <img src="public/webring/hatems.gif" alt="i hate microsoft" width="88" height="31">
             <img src="public/webring/ienuke.gif" alt="nuke internet explorer" width="88" height="31">
-            <img src="public/webring/lolicon15.gif" alt="lolicon15" width="88" height="31">
+            <!--<img src="public/webring/lolicon15.gif" alt="lolicon15" width="88" height="31">-->
             <img src="public/webring/minecraft.gif" alt="minecraft" width="88" height="31">
             <img src="public/webring/nya2.gif" alt="nya~" width="88" height="31">
             <img src="public/webring/pride.gif" alt="Pride now !" width="88" height="31">
