added a lot of things i guess new file:   blog.html 	modified:   downloads.html 	modified:   index.html 	new file:   public/webring/bitwarden.gif 	modified:   styles.css 	deleted:    webring/lumi/meta.json

--- a/index.html
+++ b/index.html
@@ -3,38 +3,67 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lumi</title>
+    <title>lumi</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-            <h1>Lumi</h1>
-
-        <button id="theme-toggle">dark</button>
+            <h1>lumi/<a href="blog.html" style="color: var(--main-text)">blog/</a><a href="#" style="color: var(--main-text)">#/</a></h1>
 
         <section>
-            <h2 id="projects">Projects</h2>
+            <h2 class="title">PS C:\users\lumi> whoami</h2>
+            <p>
+                Hi ! I'm Lumi, Tech enjoyer i love everything about computers and it, i try to touch a bit of everything but its hard with adhd (undiagnosed but pretty sure)(and maybe autism)<br>
+                I love coding, I mainly code in html/css/js (even tho js sucks) but I also code in python and a bit of java (for uni).<br>
+                    - Learning C <br>
+                    - Rust planned <br>
+                Unfortunately my pc is locked on secure boot and i dont have access to the bios so i cant install linux (i tried everything i promise)<br>
+                big fan of arch tho<br>
+            </p>
+        </section>
+        <hr>
+        <section id="projects">
+            <h2 id="title">PS C:\users\lumi> ls projects</h2>
+            <p>
+                i enjoy doing a lot of things but its difficult to manage everything with adhd <br>
+                so if you want to see what it looks like here are every ideas I have:
+            </p>
+            <p style="margin-left: 80px;">
+                <strong>Legend:</strong><br>
+                - [v] : done<br>
+                - [~] : worked on it<br>
+                - [x] : abandoned<br>
+                - [#] : working on it [1:working on it a lot | 2:working on it on my free time at home | 3:working on it when im bored (often at uni)]<br>
+                - [] : maybe one day, I hope<br>
+                - [/] : will probably never start it<br>
+            </p>
+
             <ul>
-                <li><a href="https://noxitechnologies.com">NoxiTech website</a></li>
-                <li><a href="https://rpalette.netlify.app">Random color palette generator (discontinued)</a></li>
+                <li><a href="https://noxitechnologies.com">[~] NoxiTech website</a></li>
+                <li><a href="https://rpalette.netlify.app">[x] Random color palette generator (broken link)</a></li>
                 <li><a href="https://github.com/Lumi2Ex/DirWiz">DirWiz (wip)</a></li>
                 <li><a href="https://addons.mozilla.org/fr/firefox/addon/qsc">Quick Search Shortcuts (QSC)</a></li>
                 <li><a href="downloads.html">Downloads</a></li>
-                <li><a href="#">Mega / Tetra Morpion online</a></li>
+                <!--<li><a href="#">Mega / Tetra Morpion online</a></li>-->
             </ul>
         </section>
-
-        <section>
-            <h2 id="about-me">About Me:</h2>
-            <p>Tech Nerd, Miniamaker, Designer, Web dev, Game dev, Software dev</p>
-            <p>I also make bad videos in french about chess on youtube</p>
-            <p>Le chemin est encore long...</p>
+        <hr>
+        <section id="music">
+            <h2 class="title">music</h2>
+            <p>
+                Honestly I think i couldnt live without music, its just so important to me <br>
+                It helped me with a lot of things, when im depressed or anxious, I have certain songs / albums that heals me.
+                I can't make an exhaustive list of what i listen to but here are some recommendations based on genre / mood:
+                ---
+                I Mainly listen to French rap / Metal and subgenres so here are recommendations about those:
+                <strong style="text-decoration: dashed;">Rap FR:</strong>
+            </p>
         </section>
     </div>
     <section id="webring">
         <div class="badges" style="display:flex;flex-wrap:wrap;gap:6px;align-items:center;">
-            <a href="http://lumi-ex.fr"><img src="public/webring/lumi.gif" alt="MEEEEEEEEEE" width="88" height="31"></a>
+            <a href="https://oruscating-pavlova-386d3d.netlify.app"><img src="public/webring/lumi.gif" alt="MEEEEEEEEEE" width="88" height="31"></a>
             <img src="public/webring/button145.png" alt="wii" width="88" height="31">
             <img src="public/webring/button197.png" alt="i love sans" width="88" height="31">
             <img src="public/webring/button24.png" alt="maintained by a queer folk" width="88" height="31">
@@ -42,24 +71,25 @@
             <img src="public/webring/queerpride.gif" alt="queer pride" width="88" height="31">
             <img src="public/webring/button44.gif" alt="discord" width="88" height="31">
             <img src="public/webring/button76.gif" alt="piss" width="88" height="31">
-            <img src="public/webring/doomrl.gif" alt="Doom" width="88" height="31">
-            <img src="public/webring/firefoxnow.gif" alt="Firefox NOW" width="88" height="31">
+            <a href="https://doom.fandom.com/wiki/Doom"><img src="public/webring/doomrl.gif" alt="Doom" width="88" height="31"></a>
+            <a href="https://www.firefox.com/en-US/?utm_campaign=SET_DEFAULT_BROWSER"><img src="public/webring/firefoxnow.gif" alt="Firefox NOW" width="88" height="31"></a>
             <img src="public/webring/hatems.gif" alt="i hate microsoft" width="88" height="31">
             <img src="public/webring/ienuke.gif" alt="nuke internet explorer" width="88" height="31">
             <!--<img src="public/webring/lolicon15.gif" alt="lolicon15" width="88" height="31">-->
-            <img src="public/webring/minecraft.gif" alt="minecraft" width="88" height="31">
+            <a href="https://www.minecraft.net/en-us"><img src="public/webring/minecraft.gif" alt="minecraft" width="88" height="31"></a>
             <img src="public/webring/nya2.gif" alt="nya~" width="88" height="31">
             <img src="public/webring/pride.gif" alt="Pride now !" width="88" height="31">
             <img src="public/webring/rainbow_bev.gif" alt="rainbow" width="88" height="31">
             <img src="public/webring/reshirii.gif" alt="jirachi" width="88" height="31">
             <img src="public/webring/yoshilore.gif" alt="yoshi lore" width="88" height="31">
             <img src="public/webring/ralseismokingadart.gif" alt="ralsei smoking a dart" width="88" height="31">
+            <a href="https://bitwarden.com/"><img src="public/webring/bitwarden.gif" alt="btwarden" width="88" height="31"></a>
         </div>
-        <nav>
-            <a href="#" rel="prev">← Previous</a>
-            <a href="#" rel="index">Index</a>
-            <a href="#" rel="next">Next →</a>
-        </nav>
+        <div style="display: flex; gap: 8px; margin-top: 8px;">
+            <a href="https://fediring.net/previous?host=https://coruscating-pavlova-386d3d.netlify.app/">←</a>
+            <a href="https://fediring.net/">Fediring</a>
+            <a href="https://fediring.net/next?host=https://coruscating-pavlova-386d3d.netlify.app/">→</a>
+        </div>
     </section>
     <script src="oneko.js"></script>
 </body>
