--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="index.html">home</a><br>
-    <ul>
+    <ul id="downloads">
         <h3>Mega Tic Tac Toe</h3>
         <li><a href="resources/downloads/Mega Morpion Imprimable FR.jpg" download>Mega Morpion Imprimable FR</a></li>
         <li><a href="resources/downloads/Printable Mega tic-tac-toe ENG.drawio.jpg" download>Printable Mega tic-tac-toe ENG</a></li>
